--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -24,7 +24,6 @@ div.viewport {
     background-color: #04395E;
     width: 90%;
     min-height: 75%;
-    max-width: 1400px;
     margin: 0 auto;
     font-family: 'Gugi', sans-serif;
     font-weight: 400;
@@ -120,13 +119,13 @@ nav ul li{
     background-color: white;
 }
 main .banner{
-    width: 100%;
     background: url("images/hero.jpg") no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
+    padding: 10px;
 }
 h1{
     text-align: center;
