--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -27,7 +27,7 @@ div.viewport {
     margin: 0 auto;
     font-family: 'Gugi', sans-serif;
     font-weight: 400;
-    color: #DAB785
+    color: #DAB785;
 }
 header{
     width: 100%;
