--- a/styles/larger.css
+++ b/styles/larger.css
@@ -90,3 +90,40 @@
    #date-mod {
     font-size: 1.2em;
    }
+
+   .hero2 {
+    margin: 10px auto;
+    position: relative;
+    border: 1px solid rgba(0,0,0,.1);
+    height: 300px;
+  }
+  
+  .hero2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .hero2label {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    background: radial-gradient(#fff, #4D5B97);
+    border: 1px solid rgba(0,0,0,.75);
+    padding: 1.5rem;
+    box-shadow: 0 0 3rem #fff;
+    opacity: 0.75;
+      margin: 0;
+      padding: .25rem;
+      font-weight: 700;
+      font-size: 2rem;
+      font-family:"Great Vibes", serif;
+      }
+  
+  .hero2label p {
+    margin: 0;
+    padding: .25rem;
+    font-weight: 700;
+    font-size: 2rem;
+    font-family:"Great Vibes", serif;
+  }
