--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -8,6 +8,13 @@
         display:inline-block;
         padding:10px;
     }
+    body {
+        background-color: #04395E;
+        color: #D5896F;
+        font-family: "Gugi", sans-serif;
+        display: grid;
+        align-items: center;
+    }
     img.logo{
         max-width:90%;
     }
