--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -485,6 +485,18 @@ fieldset{
 .members.list hr{
     border:none;
 }
+.meeting-banner{
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 40px;
+    width: 100%;
+    display: grid;
+    place-items: center;
+    background-color: #F1520E;
+    color: white;
+    z-index: 1000;
+}
 
 .social-logo {
     width: 40px;
