--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -121,12 +121,13 @@ nav ul li{
     background-color: white;
 }
 main .banner{
+    background: url("../images/hero.webp") no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
-    padding: 10px;
+    padding: 400px;
 }
 h1{
     text-align: center;
