--- a/final/css/little.css
+++ b/final/css/little.css
@@ -132,8 +132,6 @@ main .banner{
 }
 h1{
     text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
     color: white;
 }
 h2{
@@ -151,7 +149,6 @@ div.cardContent{
 }
 div.card{
     padding-left: 50px;
-    width: fit-content;
     padding-bottom: 50px;
     color: white;
 }
@@ -272,70 +269,6 @@ footer .fbottom span{
     padding:0 5px;
 
 }
-
-.sidebar {
-    display: grid; 
-    grid-template-columns: 1fr;
-    grid-template-areas:
-        "left"
-        "right";
-}
-.sidebar .left {
-    grid-area: left;
-}
-.sidebar .left > * {
-    padding:10px;
-}
-.sidebar .right {
-    grid-area: right;
-}
-.gallery{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 10px;
-    padding: 10px;
-}
-.galleryImage{
-    position: relative;
-    overflow: hidden;
-}
-.galleryImage img{
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover;
-    transition: transform 0.5s;
-    border-radius:5px;
-    border:1px solid #ccc;
-}
-.galleryImage .label{
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0,0,0,0.5);
-    color: #fff;
-    border-radius: 5px 0 5px 0;
-    padding: 5px;
-}
-.events{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 10px;
-    padding: 10px;
-}
-.events a .event{
-    text-decoration: underline;
-}
-.events a :not(.event){
-    font-size: 0.8em;
-    font-weight: 400;
-    margin: 0;
-    color:black;
-}
-.events a:hover .event{
-    color: #F1520E;
-    font-size: 1.1em;
-}
-
 input{
     padding: 10px 30px;
     margin: 10px;
@@ -402,110 +335,28 @@ fieldset{
     justify-content: center;
     align-items: center;
 }
-.label{
-    padding-left:20px;
-    margin-top: 3px;
-    font-style: italic;
-    font-size: 0.8em;
-    font-weight: 400;
+nav .hamburger{
+    display:inline-grid;
+    place-items: center;
 }
-.thanks-container{
-    height: 50vh;
-    padding:20px;
-    padding-top: 10vh;
-    text-align: center;
+nav .hamburger img{
+    width: 30px;
+    height: 30px;
+    margin: 0 10px;
+    cursor: pointer;
 }
-.members {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 10px;
-    padding: 10px;
-}
-.members .card{
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-.members .card picture{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
+nav{
     width: 100%;
-    border-radius: 5px;
-    display: block;
-}
-.members .card picture img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 5px;
-}
-.members .card h3{
     font-size: 1.2em;
     font-weight: 700;
-    margin: 0;
     text-align: center;
+    padding: 10px 0;
+    position: sticky;
+    top: 0;
+    align-items: center;
+    z-index: 1;
+    vertical-align: middle;
 }
-.members .card p{
-    font-size: 0.8em;
-    font-weight: 400;
-    margin: 0;
-    text-align: center;
-}
-.membership{
-    color:white;
-    padding:5px;
-    border-radius:3px;
-}
-.np{
-    background-color: #0a7c7c;
-}
-.bronze{
-    background-color: #966d44;
-}
-.silver{
-    background-color: #706f6f;
-}
-.gold{
-    background-color: #8d7700;
-}
-.members.list .card{
-    border:none;
-    border-top: 1px solid #ccc;
-    border-radius: 0;
-    margin: 0;
-}
-.members.list .card picture{
-    display: none;
-}
-.members.list .card h3{
-    font-size: 1.2em;
-    font-weight: 700;
-    margin: 0;
-    text-align: left;
-}
-.members.list .card p:not(.membership){
-    display:none;
-}
-.members.list hr{
-    border:none;
-}
-.meeting-banner{
-    position:fixed;
-    top:0;
-    left:0;
-    padding:40px;
-    width:100%;
-    display:grid;
-    place-items:center;
-    background-color: #F1520E;
-    color:white;
-    z-index:1000;
+img {
+    width: 350px;
 }
